src/tests/select/snapshots/ciboulette2postgres__tests__select__query_params__include_multiple_resources.snap
---
source: src/tests/select/query_params.rs
expression: value

---
[
  {
    "id": "[uuid]",
    "type_": "articles",
    "data": {
      "body": "Yes",
      "title": "How to dead"
    }
  },
  {
    "id": "[uuid]",
    "type_": "articles",
    "data": {
      "body": "Yeah I know ! Right ?!",
      "title": "Oh my g**"
    }
  },
  {
    "id": "[uuid]",
    "type_": "people-article",
    "data": {
      "article_id": "[uuid]",
      "people_id": "[uuid]"
    }
  },
  {
    "id": "[uuid]",
    "type_": "people-article",
    "data": {
      "article_id": "[uuid]",
      "people_id": "[uuid]"
    }
  },
  {
    "id": "[uuid]",
    "type_": "peoples",
    "data": {
      "age": 22,
      "first-name": "Francis",
      "gender": "M",
      "last-name": "Le Roy",
      "twitter": null
    }
  }
]
