src/tests/select/snapshots/ciboulette2postgres__tests__select__query_params__include_multiple_resources_with_sparsing.snap
---
source: src/tests/select/query_params.rs
expression: value

---
[
  {
    "id": "[uuid]",
    "type_": "articles",
    "data": {
      "title": "How to dead"
    }
  },
  {
    "id": "[uuid]",
    "type_": "articles",
    "data": {
      "title": "Oh my g**"
    }
  },
  {
    "id": "[uuid]",
    "type_": "people-article",
    "data": {
      "article_id": "[uuid]",
      "people_id": "[uuid]"
    }
  },
  {
    "id": "[uuid]",
    "type_": "people-article",
    "data": {
      "article_id": "[uuid]",
      "people_id": "[uuid]"
    }
  },
  {
    "id": "[uuid]",
    "type_": "peoples",
    "data": {
      "last-name": "Le Roy"
    }
  }
]
