src/tests/select/snapshots/ciboulette2postgres__tests__select__query_params__related_include_and_sparse.snap
---
source: src/tests/select/query_params.rs
expression: value

---
[
  {
    "id": "[uuid]",
    "type": "articles",
    "data": {
      "body": "Yes",
      "title": "How to dead"
    }
  },
  {
    "id": "[uuid]",
    "type": "articles",
    "data": {
      "body": "Yeah I know ! Right ?!",
      "title": "Oh my g**"
    }
  },
  {
    "id": "[uuid]",
    "type": "people-article",
    "data": {
      "article_id": "[uuid]",
      "people_id": "[uuid]"
    }
  },
  {
    "id": "[uuid]",
    "type": "people-article",
    "data": {
      "article_id": "[uuid]",
      "people_id": "[uuid]"
    }
  },
  {
    "id": "[uuid]",
    "type": "people-article",
    "data": {
      "article_id": "[uuid]",
      "people_id": "[uuid]"
    }
  },
  {
    "id": "[uuid]",
    "type": "peoples",
    "data": {
      "first-name": "Francis"
    }
  },
  {
    "id": "[uuid]",
    "type": "peoples",
    "data": {
      "first-name": "Francis"
    }
  },
  {
    "id": "[uuid]",
    "type": "peoples",
    "data": {
      "first-name": "Somebody"
    }
  }
]
