src/tests/select/snapshots/ciboulette2postgres__tests__select__query_params__related_sort_and_sparse.snap
---
source: src/tests/select/query_params.rs
expression: value

---
[
  {
    "id": "[uuid]",
    "type": "articles",
    "data": {
      "title": "Oh my g**"
    }
  },
  {
    "id": "[uuid]",
    "type": "articles",
    "data": {
      "title": "How to dead"
    }
  }
]
