src/tests/select/snapshots/ciboulette2postgres__tests__select__query_params__related_sparse_child.snap
---
source: src/tests/select/query_params.rs
expression: value

---
[
  {
    "id": "[uuid]",
    "type": "articles",
    "data": {
      "title": "How to dead"
    },
    "related": null
  },
  {
    "id": "[uuid]",
    "type": "articles",
    "data": {
      "title": "Oh my g**"
    },
    "related": null
  }
]
